# sql-query-craft

./: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: app.py  database.py  graders.py  sql_environment.py  tasks.py
